--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
   </head>
   <body>
     
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bgazure">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Fixed navbar</a>
+    <a class="navbar-brand" href="#">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -68,18 +69,51 @@
         </li>
       </ul>
       <form class="d-flex">
-        <button class="btn btn-outline-success" type="submit">Inizia ora</button>
+        <button class="btnOrangeHead btn-lg btn-primary" role="button">Inizia ora</button>
       </form>
     </div>
   </div>
 </nav>
 
-<main class="container">
-  <div class="bg-light p-5 rounded">
-    <h1>Navbar example</h1>
-    <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it will remain fixed to the top of your browser’s viewport.</p>
-    <a class="btn btn-lg btn-primary" href="../components/navbar/" role="button">View navbar docs &raquo;</a>
+<main class="containerA">
+  <div class="bg-light p-5 rounded" style="background-image: url(mockups/assets/images/main-page/home.png);
+  background-size: cover; height:300px; padding-top:80px;">
+    <h1>Netter Cloud Platform</h1>
+    <p class="lead">Un Cloud Computing diverso, </br>
+                     facile da usare, flessibile e dinamico.</p>
+    <a class="btnOrange btn-lg btn-primary" href="../components/navbar/" role="button">Crea un tenant con 300€ di credito</a>
+    <a class="btnWhite btn-lg btn-primary" role="button"> Cost calculator </a>
+    <a class="btnWhite btn-lg btn-primary" role="button"> Contattaci</a>
   </div>
+</main>
+
+<main class="containerB" >
+    <h1 style="color:rgb(0, 0, 158);text-align: center;" >Vantaggi</h1>
+   <div class="box" style="align-items:center;float: left;">
+    
+    <div class="mini-box" style="margin-top: 30px;margin-left:125px;background-image: url(mockups/assets/images/main-page/semplicita.svg);
+               background-repeat: no-repeat;
+               background-position:center;background-size: 50px,70px;" >
+    </div>
+    <p></br></br></br></br>Semplicità d'uso</br>e automazione dei processi</p>
+   </div>
+
+   <div class="box" style="margin-left:200px; align-items:center;float: left;">
+   <div class="mini-box" style="margin-top: 30px;margin-left: 125px;background-image: url(mockups/assets/images/main-page/performante.svg);
+   background-repeat: no-repeat;
+   background-position:center;background-size: 50px,70px;" >
+</div>
+<p></br></br></br></br>Maggiore efficenza </br>da innovazioni tecnologiche</p>
+</div>
+
+  <div class="box" style="float: right">
+    <div class="mini-box" style="margin-top: 30px;margin-left: 115px;background-image: url(mockups/assets/images/main-page/hardware.svg);
+   background-repeat: no-repeat;
+   background-position:center;background-size: 80px,80px;" >
+</div>
+<p></br></br></br></br>Risorse hardware dedicate </br>ad alte prestazioni</p>
+</div>
+   
 </main>
 
 
