WIP:homepage fixed some bug on head added some cards

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         </li>
       </ul>
       <form class="d-flex">
-        <button class="btnOrangeHead btn-lg btn-primary" role="button">Inizia ora</button>
+        <button class="btnOrange btn-lg btn-primary" id="button" style="text-align: center;" role="button">Inizia ora
+        
+        </button>
       </form>
     </div>
   </div>
@@ -87,33 +89,64 @@
   </div>
 </main>
 
-<main class="containerB" >
-    <h1 style="color:rgb(0, 0, 158);text-align: center;" >Vantaggi</h1>
-   <div class="box" style="align-items:center;float: left;">
-    
-    <div class="mini-box" style="margin-top: 30px;margin-left:125px;background-image: url(mockups/assets/images/main-page/semplicita.svg);
-               background-repeat: no-repeat;
-               background-position:center;background-size: 50px,70px;" >
+<main class="containerB" style="background-color: rgba(213, 213, 213, 0.419);height: 300px;">
+  <h1 style="text-align: center; color: blue;">Vantaggi</h1>
+  <div class="row">
+    <div class="col" style="text-align: center;margin-top: 60px; align-items: center;" >
+      <img src="mockups/assets/images/main-page/semplicita.svg" class="rounded" alt="align-items:center" width="80px" height="80px">
+     <p style="margin-top: 30px;">Semplicità d'uso </br> e  automazione dei processi.</p>
     </div>
-    <p></br></br></br></br>Semplicità d'uso</br>e automazione dei processi</p>
-   </div>
+    <div class="col" style="text-align: center;margin-top: 60px; align-items: center;" >
+      <img src="mockups/assets/images/main-page/performante.svg" class="rounded" alt="align-items:center" width="80px" height="80px">
+      <p style="margin-top: 30px;">Maggiorre efficenza </br>da innovazione tecnologiche.</p>
+    </div>
+    <div class="col" style="text-align: center;margin-top: 60px; align-items: center;" >
+      <img src="mockups/assets/images/main-page/hardware.svg" class="rounded" alt="align-items:center" width="80px" height="80px">
+      <p style="margin-top: 30px;">Risorse hardware dedicate</br> ad alte prestazioni.</p>
+    </div>
+  </div>
+</main>
 
-   <div class="box" style="margin-left:200px; align-items:center;float: left;">
-   <div class="mini-box" style="margin-top: 30px;margin-left: 125px;background-image: url(mockups/assets/images/main-page/performante.svg);
-   background-repeat: no-repeat;
-   background-position:center;background-size: 50px,70px;" >
-</div>
-<p></br></br></br></br>Maggiore efficenza </br>da innovazioni tecnologiche</p>
-</div>
+<main class="containerC">
+  <div class="row">
+    <h1 style="text-align: center; color: blue;">Applicazioni</h1>
+    <div class="col" style="height: 200px;">
+      <div class="card" style="width: 140px;height: 150px;margin:20px;text-align: center; background-color: orange; float: right;">
+        <div class="card-body">
+          <h5 class="card-title" style="color: white;">Server </br>di posta</h5>
+          <a href="#" class="btn btn-primary" style="position: absolute;left:5px;bottom:5px;">Installa</a>
+        </div>
+      </div>
+    </div>
 
-  <div class="box" style="float: right">
-    <div class="mini-box" style="margin-top: 30px;margin-left: 115px;background-image: url(mockups/assets/images/main-page/hardware.svg);
-   background-repeat: no-repeat;
-   background-position:center;background-size: 80px,80px;" >
-</div>
-<p></br></br></br></br>Risorse hardware dedicate </br>ad alte prestazioni</p>
-</div>
-   
+    <div class="col" style="height: 200px;">     
+       <div class="card" style="width: 140px;height: 150px;margin:20px;text-align: center; background-color: orange;float: right;">
+        <div class="card-body">
+          <h5 class="card-title" style="color: white;" >Database</br>SQL</h5>
+          <a href="#" class="btn btn-primary" style="position: absolute;left:5px;bottom:5px;">Installa</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col"style="height: 200px;">      
+      <div class="card" style="width: 140px;height: 150px;margin:20px;text-align: center; background-color: orange;float: left;">
+        <div class="card-body">
+          <h5 class="card-title"style="color: white;" >Centralino </br>Voip</h5>
+          <a href="#" class="btn btn-primary" style="position: absolute;left:5px;bottom:5px;">Installa</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col" style="height: 200px;">     
+       <div class="card" style="width: 140px;height: 150px;margin:20px;text-align: center;background-color: rgba(213, 213, 213, 0.419);float: left;">
+        <div class="card-body">
+          <h5 class="card-title">Calcola </br>costi</h5>
+          <a href="#" class="btn btn-primary" style="left:5px;bottom:5px;">Calcola costi</a>
+          <a href="#" class="btn btn-primary" style="position: absolute;left:5px;bottom:5px;">Installa</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 
 
