added english language to homepage

--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
   <div class="container-fluid container-vertical-padding container-with-icons">
     <h2 class="container-title">Vantaggi</h2>
     <div class="row" style="padding-top: 30px;">
-      <div class="col icon-column-style">
+      <div class="col icon-column-style semplicity">
         <img src="file:///home/manse/git/netter/netter-cloudprovider-website/img/svg/semplicita.svg" class="rounded icon-img" alt="align-items:center" width="120px"
           height="120px">
         <p class="icons-paragraph">Semplicità d'uso </br> e automazione dei processi.</p>
       </div>
-      <div class="col icon-column-style">
+      <div class="col icon-column-style performance">
         <img src="file:///home/manse/git/netter/netter-cloudprovider-website/img/svg/performante.svg" class="rounded icon-img" alt="align-items:center" width="120px"
           height="120px">
         <p class="icons-paragraph">Maggiorre efficenza </br>da innovazione tecnologiche.</p>
       </div>
-      <div class="col icon-column-style">
+      <div class="col icon-column-style hardware">
         <img src="file:///home/manse/git/netter/netter-cloudprovider-website/img/svg/hardware.svg" class="rounded icon-img" alt="align-items:center" width="120px"
           height="120px">
         <p class="icons-paragraph">Risorse hardware dedicate</br> ad alte prestazioni.</p>
