--- a/pages/applications.html
+++ b/pages/applications.html
@@ -35,11 +35,11 @@
 
   <!-- Custom styles for this template -->
 
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/navbar.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/footer.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/buttons.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/card-flipper.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/applicazioni.css" rel="stylesheet">
+  <link href="./../css/navbar.css" rel="stylesheet">
+  <link href="./../css/footer.css" rel="stylesheet">
+  <link href="./../css/buttons.css" rel="stylesheet">
+  <link href="./../css/card-flipper.css" rel="stylesheet">
+  <link href="./../css/applicazioni.css" rel="stylesheet">
 </head>
 
 <body>
@@ -100,16 +100,16 @@
   </div>
 
 
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/navbar.js"></script>
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/footer.js"></script>
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/appCardsCreator.js"></script>
+  <script src="./../js/navbar.js"></script>
+  <script src="./../js/footer.js"></script>
+  <script src="./../js/appCardsCreator.js"></script>
    <!-- Jquery and simplePagination essental for applicatin cards pagination -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/jquery.simplePagination.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
   
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/application.js">  </script>
+  <script src="./../js/application.js">  </script>
 
 </body>
 
