--- a/pages/blog.html
+++ b/pages/blog.html
@@ -35,11 +35,11 @@
 
   <!-- Custom styles for this template -->
 
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/navbar.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/footer.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/buttons.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/card-flipper.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/blog.css" rel="stylesheet">
+  <link href="./../css/navbar.css" rel="stylesheet">
+  <link href="./../css/footer.css" rel="stylesheet">
+  <link href="./../css/buttons.css" rel="stylesheet">
+  <link href="./../css/card-flipper.css" rel="stylesheet">
+  <link href="./../css/blog.css" rel="stylesheet">
 </head>
 
 <body>
@@ -60,8 +60,8 @@
   <div id="footer-container">
   </div>
 
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/navbar.js"></script>
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/footer.js"></script>
+  <script src="./../js/navbar.js"></script>
+  <script src="./../js/footer.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
