--- a/pages/devices.html
+++ b/pages/devices.html
@@ -35,11 +35,11 @@
 
   <!-- Custom styles for this template -->
 
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/navbar.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/footer.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/buttons.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/card-flipper.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/dispositivi.css" rel="stylesheet">
+  <link href="./../css/navbar.css" rel="stylesheet">
+  <link href="./../css/footer.css" rel="stylesheet">
+  <link href="./../css/buttons.css" rel="stylesheet">
+  <link href="./../css/card-flipper.css" rel="stylesheet">
+  <link href="./../css/dispositivi.css" rel="stylesheet">
 </head>
 
 <body>
@@ -97,7 +97,7 @@
 
   <div class="conatiner container-vertical-padding">
     <div class="d-flex justify-content-center">
-      <img src="file:///home/manse/git/netter/netter-cloudprovider-website/img/svg/client1.svg" height="250px" width="400px">
+      <img src="./../img/svg/client1.svg" height="250px" width="400px">
     </div>
     <h3 class="container-title">Espandibile con</h3>
   </div>
@@ -110,9 +110,9 @@
   </div>
 
 
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/navbar.js"></script>
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/footer.js"></script>
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/dispositivi.js"></script>
+  <script src="./../js/navbar.js"></script>
+  <script src="./../js/footer.js"></script>
+  <script src="./../js/dispositivi.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
