--- a/pages/form.html
+++ b/pages/form.html
@@ -35,12 +35,12 @@
 
     <!-- Custom styles for this template -->
 
-    <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/navbar.css" rel="stylesheet">
-    <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/footer.css" rel="stylesheet">
-    <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/buttons.css" rel="stylesheet">
-    <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/language.css" rel="stylesheet">
-    <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/card-flipper.css" rel="stylesheet">
-    <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/form.css" rel="stylesheet">
+    <link href="./../css/navbar.css" rel="stylesheet">
+    <link href="./../css/footer.css" rel="stylesheet">
+    <link href="./../css/buttons.css" rel="stylesheet">
+    <link href="./../css/language.css" rel="stylesheet">
+    <link href="./../css/card-flipper.css" rel="stylesheet">
+    <link href="./../css/form.css" rel="stylesheet">
 </head>
 
 <body>
@@ -257,9 +257,9 @@
     </div>
 
 
-    <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/navbar.js"></script>
-    <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/footer.js"></script>
-    <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/form.js"></script>
+    <script src="./../js/navbar.js"></script>
+    <script src="./../js/footer.js"></script>
+    <script src="./../js/form.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
