--- a/pages/privacy_policy.html
+++ b/pages/privacy_policy.html
@@ -58,8 +58,8 @@
 
   <div id="footer-container">
   </div>
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/shared js/navbar.js"></script>
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/shared js/footer.js"></script>
+  <script src="./../shared js/navbar.js"></script>
+  <script src="./../shared js/footer.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
