--- a/pages/support.html
+++ b/pages/support.html
@@ -36,11 +36,11 @@
   <!-- Custom styles for this template -->
 
 
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/navbar.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/footer.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/buttons.css" rel="stylesheet">  
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/card-flipper.css" rel="stylesheet">
-  <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/supporto.css" rel="stylesheet">
+  <link href="./../css/navbar.css" rel="stylesheet">
+  <link href="./../css/footer.css" rel="stylesheet">
+  <link href="./../css/buttons.css" rel="stylesheet">  
+  <link href="./../css/card-flipper.css" rel="stylesheet">
+  <link href="./../css/supporto.css" rel="stylesheet">
 </head>
 
 <body>
@@ -61,8 +61,8 @@
   <div id="footer-container">
   </div>
 
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/navbar.js"></script>
-  <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/footer.js"></script>
+  <script src="./../js/navbar.js"></script>
+  <script src="./../js/footer.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
