added english version to Software Applicazioni Dispositivi Sessioni pages

--- a/pages/applications.html
+++ b/pages/applications.html
@@ -102,6 +102,7 @@
 
   <script src="./../js/navbar.js"></script>
   <script src="./../js/footer.js"></script>
+  <script src="./../js/navbarLanguage.js"></script>
   <script src="./../js/appCardsCreator.js"></script>
    <!-- Jquery and simplePagination essental for applicatin cards pagination -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
