--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
   <script src="./js/homepage.js"></script>
   <script src="./js/customersCardsCreator.js"></script>
   <script src="./js/footer.js"></script>
+  <script src="./js/navbarLanguage.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
