--- a/pages/devices.html
+++ b/pages/devices.html
@@ -56,11 +56,12 @@
       </div>
     </div>
   </div>
+
   <div class="container-fluid colored-bar-red">
     <h2 class="bar-red-header"> Il Dispositivo </h2>
     <p class="bar-red-paragraph">ONE è un Cloud Computer - termine coniato da Netter </br>
                           per rappresentare una inedita tipologia di terminali da collocare </br>
-                        sulla propria scrivania (anche in ambienti industriali)-che sostituisce</br>
+                        sulla propria scrivania (anche in ambienti industriali) che sostituisce</br>
                                            il normale Personal Computer</p>
   </div>
 
@@ -82,7 +83,7 @@
     </div>
   </div>
 
-  <div class="container-fluid container-vertical-padding" style="background-color: #eeee;">
+  <div class="container-fluid container-vertical-padding" id="devices-container-1" style="background-color: #eeee;">
     <h3 class="container-title text-center">Caratteristiche</h3>
     <p class="text-center">    Processore QuadCore, SSD</br>
                                 Tripla uscita monitor</br>
@@ -95,16 +96,16 @@
 
   </div>
 
-  <div class="conatiner container-vertical-padding">
+  <div class="conatiner container-vertical-padding" >
     <div class="d-flex justify-content-center">
       <img src="./../img/svg/client1.svg" height="250px" width="400px">
     </div>
     <h3 class="container-title">Espandibile con</h3>
-  </div>
 
   <div class="row app-row" id="flip-card-container-2">
 
   </div>
+</div>
 
   <div id="footer-container">
   </div>
@@ -112,7 +113,8 @@
 
   <script src="./../js/navbar.js"></script>
   <script src="./../js/footer.js"></script>
-  <script src="./../js/dispositivi.js"></script>
+  <script src="./../js/devices.js"></script>
+  <script src="./../js/navbarLanguage.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
