--- a/pages/software.html
+++ b/pages/software.html
@@ -86,7 +86,8 @@
 
   <script src="./../js/navbar.js"></script>
   <script src="./../js/footer.js"></script>
-  <script src="./../js/softwareCardsCreator.js"></script>
+  <script src="./../js/navbarLanguage.js"></script>
+  <script src="./../js/software.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
