--- a/pages/pricelist.html
+++ b/pages/pricelist.html
@@ -56,7 +56,7 @@
     </div>
   </div>
   
-<div class="container container-vertical-padding">
+<div class="container container-vertical-padding" id='connection-check'>
   <h3 class="container-title">Verifica la tua connessione ottimale</h3>
   <div class="input-group">
     <input type="text" id="Comune" aria-label="Comune" placeholder="Comune" class="form-control">
@@ -73,14 +73,14 @@
 <div class="container container-vertical-padding">
   <h2 class="container-title">Mostra le risorse</h2>
   <div class="d-flex justify-content-evenly">
-    <button class="btn btn-primary button-white-to-black" id="RAM" type="button" onclick="changeCard(event)">RAM</button>
-    <button class="btn btn-primary button-white-to-black" id="CPU" type="button" onclick="changeCard(event)">CPU</button>
-    <button class="btn btn-primary button-white-to-black" id="GPU" type="button" onclick="changeCard(event)">GPU</button>
-    <button class="btn btn-primary button-white-to-black" id="Storage" type="button" onclick="changeCard(event)">Storage</button>
-    <button class="btn btn-primary button-white-to-black" id="Rete" type="button" onclick="changeCard(event)">Rete</button>
-    <button class="btn btn-primary button-white-to-black" id="Connettività internet" type="button" onclick="changeCard(event)">Connettività Internet</button>
-    <button class="btn btn-primary button-white-to-black" id="FPGA" type="button" onclick="changeCard(event)">FPGA</button>
-    <button class="btn btn-primary button-white-to-black" id="NVDIMN" type="button" onclick="changeCard(event)">NVDIMN</button>
+    <button class="btn btn-primary button-white-to-black" id="RAM" type="button" onclick="getData(event)">RAM</button>
+    <button class="btn btn-primary button-white-to-black" id="CPU" type="button" onclick="getData(event)">CPU</button>
+    <button class="btn btn-primary button-white-to-black" id="GPU" type="button" onclick="getData(event)">GPU</button>
+    <button class="btn btn-primary button-white-to-black" id="Storage" type="button" onclick="getData(event)">Storage</button>
+    <button class="btn btn-primary button-white-to-black" id="Rete" type="button" onclick="getData(event)">Rete</button>
+    <button class="btn btn-primary button-white-to-black" id="Connettività internet" type="button" onclick="getData(event)">Connettività Internet</button>
+    <button class="btn btn-primary button-white-to-black" id="FPGA" type="button" onclick="getData(event)">FPGA</button>
+    <button class="btn btn-primary button-white-to-black" id="NVDIMN" type="button" onclick="getData(event)">NVDIMN</button>
   </div>
 
 </div>
@@ -93,8 +93,8 @@
 
   <script src="./../js/navbar.js"></script>
   <script src="./../js/footer.js"></script>
-  <script src="./../js/listinoConnectionControl.js"></script>
-  <script src="./../js/listinoResourcesCards.js"></script>
+  <script src="./../js/pricelist.js"></script>
+  <script src="./../js/navbarLanguage.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
