--- a/pages/pricelist.html
+++ b/pages/pricelist.html
@@ -39,7 +39,7 @@
   <link href="./../css/footer.css" rel="stylesheet">
   <link href="./../css/buttons.css" rel="stylesheet">
   <link href="./../css/card-flipper.css" rel="stylesheet">
-  <link href="./../css/listino.css" rel="stylesheet">
+  <link href="./../css/pricelist.css" rel="stylesheet">
 </head>
 
 <body>
@@ -70,17 +70,9 @@
   </div>
 </div>
 
-<div class="container container-vertical-padding">
+<div class="container-fluid container-vertical-padding">
   <h2 class="container-title">Mostra le risorse</h2>
-  <div class="d-flex justify-content-evenly">
-    <button class="btn btn-primary button-white-to-black" id="RAM" type="button" onclick="getData(event)">RAM</button>
-    <button class="btn btn-primary button-white-to-black" id="CPU" type="button" onclick="getData(event)">CPU</button>
-    <button class="btn btn-primary button-white-to-black" id="GPU" type="button" onclick="getData(event)">GPU</button>
-    <button class="btn btn-primary button-white-to-black" id="Storage" type="button" onclick="getData(event)">Storage</button>
-    <button class="btn btn-primary button-white-to-black" id="Rete" type="button" onclick="getData(event)">Rete</button>
-    <button class="btn btn-primary button-white-to-black" id="Connettività internet" type="button" onclick="getData(event)">Connettività Internet</button>
-    <button class="btn btn-primary button-white-to-black" id="FPGA" type="button" onclick="getData(event)">FPGA</button>
-    <button class="btn btn-primary button-white-to-black" id="NVDIMN" type="button" onclick="getData(event)">NVDIMN</button>
+  <div class="d-flex justify-content-evenly" id="resources-button">
   </div>
 
 </div>
