--- a/pages/blog.html
+++ b/pages/blog.html
@@ -38,7 +38,6 @@
   <link href="./../css/navbar.css" rel="stylesheet">
   <link href="./../css/footer.css" rel="stylesheet">
   <link href="./../css/buttons.css" rel="stylesheet">
-  <link href="./../css/card-flipper.css" rel="stylesheet">
   <link href="./../css/blog.css" rel="stylesheet">
 </head>
 
@@ -50,10 +49,14 @@
 
   <div class="container-fluid container-top-page">
     <div style="background-color:transparent">
-      <h1>Pagina mancante</h1>
-      <p class="lead">Domande e risposte frequenti</br>
-        su Netter Cloud Platfrom</p>
+      <h1>Netter blog</h1>
+      <p class="lead">Leggi le ultime news di Netter,</br>
+          scritte dai nostri developers</p>
     </div>
+  </div>
+
+  <div class="conatiner" id="container-blog-cards">
+
   </div>
 
 
@@ -62,6 +65,7 @@
 
   <script src="./../js/navbar.js"></script>
   <script src="./../js/footer.js"></script>
+  <script src="./../js/blog.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
