--- a/pages/support.html
+++ b/pages/support.html
@@ -51,10 +51,25 @@
 
   <div class="container-fluid container-top-page">
     <div style="background-color:transparent">
-      <h1>PAGINA MANCANTE</h1>
-      <p class="lead">Domande e risposte frequenti</br>
-        su Netter Cloud Platfrom</p>
+      <h1>Support</h1>
+      <p class="lead">Contattaci per ricevere assistenza</p>
     </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h2>E-mail:</h2>
+        <p>NetterEmail@email.com</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h2>Numero:</h2>
+        <p>0755282045 (da cambiare)</p>
+      </div>
+      </div>
+
   </div>
 
 
